public.tf

# Create the proxy
resource "aws_instance" "proxy" {
    ami           = "ami-785db401"
    instance_type = "t2.micro"
    key_name="${var.key_name}"
    vpc_security_group_ids = ["${aws_security_group.public.id}"]
    subnet_id = "${aws_subnet.public.id}"

    tags {
      Name = "Proxy"
    }
}


resource "aws_security_group" "public" {
  name        = "public rules"
  vpc_id ="${aws_vpc.tf_pruebas.id}"
  ingress {
    from_port   = 80
    to_port     = 80
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  ingress {
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  ingress {
    from_port   = 443
    to_port     = 443
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }


  egress {
    from_port       = 0
    to_port         = 0
    protocol        = "-1"
    cidr_blocks     = ["0.0.0.0/0"]
  }
}
